--- a/recipez/Base.lproj/Main.storyboard
+++ b/recipez/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3xZ-qV-Slh">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,11 +17,164 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="79" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zo8-5T-XPP">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="79" id="TEQ-pp-i49">
+                                        <rect key="frame" x="0.0" y="92" width="600" height="79"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="TEQ-pp-i49" id="MxM-HG-fhR">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="78"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9ro-yU-8Rb">
+                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="79"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Mums Happy Hamburger" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d7c-4a-wUn">
+                                                    <rect key="frame" x="0.0" y="28" width="600" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="zD6-23-2hn"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-BoldItalic" family="Helvetica Neue" pointSize="22"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <color key="shadowColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <size key="shadowOffset" width="1" height="1"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="9ro-yU-8Rb" firstAttribute="top" secondItem="MxM-HG-fhR" secondAttribute="top" id="5qC-ME-7w2"/>
+                                                <constraint firstItem="d7c-4a-wUn" firstAttribute="leading" secondItem="MxM-HG-fhR" secondAttribute="leading" id="CDV-PO-M8V"/>
+                                                <constraint firstItem="d7c-4a-wUn" firstAttribute="centerX" secondItem="MxM-HG-fhR" secondAttribute="centerX" id="PIg-Ye-28Y"/>
+                                                <constraint firstAttribute="trailing" secondItem="9ro-yU-8Rb" secondAttribute="trailing" id="PRn-sw-eoj"/>
+                                                <constraint firstAttribute="trailing" secondItem="d7c-4a-wUn" secondAttribute="trailing" id="f6O-Le-POi"/>
+                                                <constraint firstItem="9ro-yU-8Rb" firstAttribute="leading" secondItem="MxM-HG-fhR" secondAttribute="leading" id="mpy-sY-uY6"/>
+                                                <constraint firstAttribute="bottom" secondItem="9ro-yU-8Rb" secondAttribute="bottom" id="y8n-J0-09E"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="zo8-5T-XPP" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="ZuH-Dc-Wv9"/>
+                            <constraint firstItem="zo8-5T-XPP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="pC7-4p-SPb"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="zo8-5T-XPP" secondAttribute="bottom" id="ymY-YK-qOf"/>
+                            <constraint firstAttribute="trailing" secondItem="zo8-5T-XPP" secondAttribute="trailing" id="znt-4q-d33"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="qsc-5Q-h1V">
+                        <barButtonItem key="rightBarButtonItem" title="+ NEW" id="FB6-Cp-HvY">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <segue destination="EcP-k4-QdL" kind="show" id="OSP-80-TzW"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="zo8-5T-XPP" id="6dI-UQ-oof"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1358" y="437"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="mlN-8U-ERH">
+            <objects>
+                <viewController id="EcP-k4-QdL" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="JQR-c8-gGk"/>
+                        <viewControllerLayoutGuide type="bottom" id="WLL-CE-mwA"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="te0-5g-cHX">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Recipe title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V92-XZ-Emn">
+                                <rect key="frame" x="20" y="96" width="560" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Recipe ingredients" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cuh-M1-zR4">
+                                <rect key="frame" x="20" y="140" width="560" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Recipe steps" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NB9-jX-KXF">
+                                <rect key="frame" x="20" y="184" width="560" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ql3-NX-zk4">
+                                <rect key="frame" x="213" y="257" width="175" height="175"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="175" id="XNn-Y6-D8t"/>
+                                    <constraint firstAttribute="width" constant="175" id="rWu-TU-2uy"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nWN-kU-HX1">
+                                <rect key="frame" x="213" y="257" width="175" height="170"/>
+                                <state key="normal" title="ADD IMAGE">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h3M-eY-bpP">
+                                <rect key="frame" x="250" y="472" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="0i3-yU-rUC"/>
+                                    <constraint firstAttribute="width" constant="100" id="gsK-hk-rP7"/>
+                                </constraints>
+                                <state key="normal" title="Create Recipe"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="cuh-M1-zR4" firstAttribute="leading" secondItem="te0-5g-cHX" secondAttribute="leadingMargin" id="2ti-3y-rUu"/>
+                            <constraint firstItem="nWN-kU-HX1" firstAttribute="centerY" secondItem="Ql3-NX-zk4" secondAttribute="centerY" id="4Zo-FL-mbd"/>
+                            <constraint firstItem="nWN-kU-HX1" firstAttribute="height" secondItem="Ql3-NX-zk4" secondAttribute="height" id="5hs-jG-UKC"/>
+                            <constraint firstItem="cuh-M1-zR4" firstAttribute="top" secondItem="V92-XZ-Emn" secondAttribute="bottom" constant="14" id="7Eu-OD-3oI"/>
+                            <constraint firstItem="nWN-kU-HX1" firstAttribute="width" secondItem="Ql3-NX-zk4" secondAttribute="width" id="AEi-cY-h5e"/>
+                            <constraint firstItem="NB9-jX-KXF" firstAttribute="top" secondItem="cuh-M1-zR4" secondAttribute="bottom" constant="14" id="Lj9-rN-UV3"/>
+                            <constraint firstItem="cuh-M1-zR4" firstAttribute="trailing" secondItem="te0-5g-cHX" secondAttribute="trailingMargin" id="NMa-Br-YVk"/>
+                            <constraint firstItem="V92-XZ-Emn" firstAttribute="leading" secondItem="te0-5g-cHX" secondAttribute="leadingMargin" id="brk-yB-QVE"/>
+                            <constraint firstItem="V92-XZ-Emn" firstAttribute="trailing" secondItem="te0-5g-cHX" secondAttribute="trailingMargin" id="enb-gg-TGm"/>
+                            <constraint firstItem="h3M-eY-bpP" firstAttribute="centerX" secondItem="te0-5g-cHX" secondAttribute="centerX" id="fdc-t6-13R"/>
+                            <constraint firstItem="V92-XZ-Emn" firstAttribute="top" secondItem="JQR-c8-gGk" secondAttribute="bottom" constant="32" id="hO6-PE-2cE"/>
+                            <constraint firstItem="h3M-eY-bpP" firstAttribute="top" secondItem="Ql3-NX-zk4" secondAttribute="bottom" constant="40" id="ig8-8x-ev6"/>
+                            <constraint firstItem="nWN-kU-HX1" firstAttribute="centerX" secondItem="Ql3-NX-zk4" secondAttribute="centerX" id="kep-Gj-dzo"/>
+                            <constraint firstItem="Ql3-NX-zk4" firstAttribute="centerX" secondItem="te0-5g-cHX" secondAttribute="centerX" id="mB4-Fx-VGh"/>
+                            <constraint firstItem="NB9-jX-KXF" firstAttribute="trailing" secondItem="te0-5g-cHX" secondAttribute="trailingMargin" id="nVu-Wa-eww"/>
+                            <constraint firstItem="NB9-jX-KXF" firstAttribute="leading" secondItem="te0-5g-cHX" secondAttribute="leadingMargin" id="rsn-Xe-9Re"/>
+                            <constraint firstItem="Ql3-NX-zk4" firstAttribute="top" secondItem="NB9-jX-KXF" secondAttribute="bottom" constant="43" id="uPh-ct-Llg"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Li-zT-ONo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2216" y="432"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="p03-SP-Ezx">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3xZ-qV-Slh" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Age-6A-eT6">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="1" green="0.50196081399917603" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Xqn-3c-jBF"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hqu-Qb-HTa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="546" y="1097"/>
         </scene>
     </scenes>
 </document>
