--- a/recipez/Base.lproj/Main.storyboard
+++ b/recipez/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="79" id="TEQ-pp-i49">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RecipeCell" rowHeight="79" id="TEQ-pp-i49" customClass="RecipeCell" customModule="recipez" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="92" width="600" height="79"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="TEQ-pp-i49" id="MxM-HG-fhR">
@@ -54,6 +54,10 @@
                                                 <constraint firstAttribute="bottom" secondItem="9ro-yU-8Rb" secondAttribute="bottom" id="y8n-J0-09E"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="recipeImage" destination="9ro-yU-8Rb" id="DsM-Nt-HyR"/>
+                                            <outlet property="recipeTitle" destination="d7c-4a-wUn" id="f1v-k2-ahg"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
