--- a/recipez/Base.lproj/Main.storyboard
+++ b/recipez/Base.lproj/Main.storyboard
@@ -113,7 +113,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ql3-NX-zk4">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="food" translatesAutoresizingMaskIntoConstraints="NO" id="Ql3-NX-zk4">
                                 <rect key="frame" x="213" y="257" width="175" height="175"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="175" id="XNn-Y6-D8t"/>
@@ -181,4 +181,7 @@
             <point key="canvasLocation" x="546" y="1097"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="food" width="1200" height="692"/>
+    </resources>
 </document>
