--- a/recipez/Base.lproj/Main.storyboard
+++ b/recipez/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="79" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zo8-5T-XPP">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="79" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zo8-5T-XPP">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -26,10 +26,10 @@
                                         <rect key="frame" x="0.0" y="92" width="600" height="79"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="TEQ-pp-i49" id="MxM-HG-fhR">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="78"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="79"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9ro-yU-8Rb">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9ro-yU-8Rb">
                                                     <rect key="frame" x="0.0" y="0.0" width="600" height="79"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Mums Happy Hamburger" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d7c-4a-wUn">
@@ -86,10 +86,10 @@
             </objects>
             <point key="canvasLocation" x="1358" y="437"/>
         </scene>
-        <!--View Controller-->
+        <!--Create RecipeVC-->
         <scene sceneID="mlN-8U-ERH">
             <objects>
-                <viewController id="EcP-k4-QdL" sceneMemberID="viewController">
+                <viewController id="EcP-k4-QdL" customClass="CreateRecipeVC" customModule="recipez" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="JQR-c8-gGk"/>
                         <viewControllerLayoutGuide type="bottom" id="WLL-CE-mwA"/>
@@ -125,6 +125,9 @@
                                 <state key="normal" title="ADD IMAGE">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="addImage:" destination="EcP-k4-QdL" eventType="touchUpInside" id="oFd-bi-mqc"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h3M-eY-bpP">
                                 <rect key="frame" x="250" y="472" width="100" height="30"/>
@@ -133,6 +136,9 @@
                                     <constraint firstAttribute="width" constant="100" id="gsK-hk-rP7"/>
                                 </constraints>
                                 <state key="normal" title="Create Recipe"/>
+                                <connections>
+                                    <action selector="createRecipe:" destination="EcP-k4-QdL" eventType="touchUpInside" id="TJK-S7-JoB"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -156,6 +162,12 @@
                             <constraint firstItem="Ql3-NX-zk4" firstAttribute="top" secondItem="NB9-jX-KXF" secondAttribute="bottom" constant="43" id="uPh-ct-Llg"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="recipeImg" destination="Ql3-NX-zk4" id="h2k-V2-6CP"/>
+                        <outlet property="recipeIngredients" destination="cuh-M1-zR4" id="J5H-4o-Ldh"/>
+                        <outlet property="recipeSteps" destination="NB9-jX-KXF" id="Igr-be-3oQ"/>
+                        <outlet property="recipeTitle" destination="V92-XZ-Emn" id="N8m-fJ-TUz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Li-zT-ONo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
